[package]
name = "cyberdrop-dl"
version = "0.3.1"
authors = ["wmw <github.com/wmw9>"]
edition = "2018"
description = "Cyberdrop.me album downloader written in Rust"
readme = "README.md"
homepage = "https://github.com/wmw9/cyberdrop-dl"
repository = "https://github.com/wmw9/cyberdrop-dl"
license = "MIT"
keywords = ["cyberdrop", "downloader", "scraper"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
scraper = "0.12.0"
byte-unit = "4.0.12"
indicatif = "0.16.2"
url = "2.2.2"
bytes = "1.0.1"
futures = "0.3.15"
[dev-dependencies]
tokio-test = "0.4.2"
